--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
+title: latest_posts
+description: "Latest posts about irrelevant garbage."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
